planner authentication
